force-app/main/default/objects/Dan360_ProductosDeReclamo__c/Dan360_ProductosDeReclamo__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los productos que se relacionan aun reclamo.</description>
    <label>Producto de Reclamo</label>
    <nameField>
        <label>Nombre de Productos de Reclamo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de reclamo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>