force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_CantidadDevolver__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CantidadDevolver__c</fullName>
    <description>Cantidad de producto que se va a devolver.</description>
    <label>Cantidad a devolver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>