force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_CantidadProductoFaltante__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CantidadProductoFaltante__c</fullName>
    <description>Cantidad de producto faltante</description>
    <label>Cantidad de producto faltante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>