force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_DiferenciaPrecio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DiferenciaPrecio__c</fullName>
    <description>Diferencia de precio del producto.</description>
    <label>Diferencia de precio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>