force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_IDLineaReferenciaSAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_IDLineaReferenciaSAP__c</fullName>
    <label>ID línea referencia SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>