force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_NumeroReferenciaSAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NumeroReferenciaSAP__c</fullName>
    <label>Número Referencia SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>