force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_Precio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Precio__c</fullName>
    <description>Campo que representa el precio que implica un reclamo por faltante o devolución para este producto</description>
    <label>Precio por unidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>