force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PrecioTotal__c</fullName>
    <description>Precio total que se cobró al cliente.</description>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>