force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto para el cual se realiza el reclamo.</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de reclamo</relationshipLabel>
    <relationshipName>Productos_de_reclamo</relationshipName>
    <type>Lookup</type>
</CustomField>