force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_Reclamo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Reclamo__c</fullName>
    <description>Reclamo al que se asocia el producto.</description>
    <label>Reclamo</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Productos de reclamo</relationshipLabel>
    <relationshipName>Productos_de_reclamo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>