force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Dan360_UnidadMedidaProducto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadMedidaProducto__c</fullName>
    <label>Unidad de medida de producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>