force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Diferencia_Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Precio_Unitario__c</fullName>
    <description>Campo que guarda la diferencia entre el Importe cálculo unitario y el precio cotizado.</description>
    <label>Diferencia Precio Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>