force-app/main/default/objects/Dan360_ProductosDeReclamo__c/fields/Precio_Cotizado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Cotizado__c</fullName>
    <description>Precio que el cliente</description>
    <label>Precio Unitario Cotizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>