force-app/main/default/objects/Dan360_ProductosDeReclamo__c/recordTypes/Dan360_ProductoReclamoDevolucion.recordType-meta.xml
<RecordType>
    <fullName>Dan360_ProductoReclamoDevolucion</fullName>
    <active>true</active>
    <label>Producto de reclamo por devolución</label>
</RecordType>