force-app/main/default/objects/Dan360_ProductosDeReclamo__c/recordTypes/Dan360_ProductoReclamoDiferenciaPrecios.recordType-meta.xml
<RecordType>
    <fullName>Dan360_ProductoReclamoDiferenciaPrecios</fullName>
    <active>true</active>
    <label>Producto de reclamo por diferencia de precios</label>
</RecordType>