force-app/main/default/objects/Dan360_ProductosDeReclamo__c/recordTypes/Dan360_ProductoReclamoFaltantes.recordType-meta.xml
<RecordType>
    <fullName>Dan360_ProductoReclamoFaltantes</fullName>
    <active>true</active>
    <label>Producto de reclamo por faltantes</label>
</RecordType>